--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Legal Solution</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/bootstrap.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&display=swap" rel="stylesheet">
 </head>
 
 <body class="container">
@@ -45,6 +49,23 @@
                 </div>
             </div>
         </nav>
+
+        <section class="mt-5 container-fluid">
+            <div class="bg-image banner rounded" style="background-image: url(images/banner.png);">
+                <div class="color-overlay d-flex justify-content-center align-items-center">
+                    <div>
+                        <h1 class="header-title">We Provide Effective Legal Solutions</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto saepe hic
+                            obcaecati laboriosam quisquam. At sequi mollitia optio corporis.</p>
+                        <form action="">
+                            <button class="btn btn-warning">Search</button>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        
     </header>
     <!-- Main Section  -->
     <main>
@@ -55,11 +76,6 @@
 
     </footer>
 
-
-    <!-- BS JS  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
