launch-break - carousel start

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e81ca27c24.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="container">
@@ -50,14 +51,15 @@
             </div>
         </nav>
 
-        <section class="mt-5 container-fluid">
+        <section class="container-fluid">
             <div class="bg-image banner rounded" style="background-image: url(images/banner.png);">
                 <div class="color-overlay d-flex justify-content-center align-items-center">
-                    <div>
+                    <div class="mx-auto">
                         <h1 class="header-title">We Provide Effective Legal Solutions</h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto saepe hic
                             obcaecati laboriosam quisquam. At sequi mollitia optio corporis.</p>
-                        <form action="">
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="text" placeholder="Search Your Services">
                             <button class="btn btn-warning">Search</button>
                         </form>
                     </div>
@@ -65,10 +67,56 @@
                 </div>
             </div>
         </section>
-        
     </header>
     <!-- Main Section  -->
     <main>
+        <section class="container w-75 h-100 section">
+            <div class="row text-center">
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0" style="border-left-style: none; border-top-style: none;">
+                    <img src="images/business.png" style="height:70px; width:70px;" alt="">
+                    <h5 class="card-title mt-3">Business Law</h5>
+                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0">
+                    <img src="images/criminal.png" style="height:70px; width:70px;" alt="">
+                    <h5 class="card-title mt-3">Criminal Law</h5>
+                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0" style="border-right-style: none; border-top-style: none;">
+                    <img src="images/child.png" style="height:70px; width:70px;" alt="">
+                    <h5 class="card-title mt-3">Child Support</h5>
+                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0" style="border-left-style: none; border-bottom-style: none;">
+                    <img src="images/education.png" style="height:70px; width:70px;" alt="">
+                    <h5 class="card-title mt-3">Education Law</h5>
+                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0">
+                    <img src="images/divorce.png" style="height:70px; width:70px;" alt="">
+                    <h5 class="card-title mt-3">Divorce Law</h5>
+                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0" style="border-right-style: none; border-bottom-style: none;">
+                    <img src="images/tax.png" style="height:70px; width:70px;" alt="">
+                    <h5 class="card-title mt-3">Tax Law</h5>
+                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <img src="images/Frame.png" alt="">
+                </div>   
+            </div>
+        </section>
+
+        <section class="container section">
+            <div>
+                <h1>What Our Client Say</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam consequuntur ea in error quaerat! Expedita quod, maxime ex, soluta tempore dolore exercitationem earum consequuntur quos, incidunt quasi molestiae voluptates esse.</p>
+            </div>
+        </section>
 
     </main>
     <!-- Footer section  -->
