--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <section class="container-fluid">
             <div class="bg-image banner rounded" style="background-image: url(images/banner.png);">
                 <div class="color-overlay d-flex justify-content-center align-items-center">
-                    <div class="mx-auto">
-                        <h1 class="header-title">We Provide Effective Legal Solutions</h1>
+                    <div class="mx-auto text-area">
+                        <h1 class="display-4 fw-semibold mx-5 px-5" ;>We Provide Effective Legal Solutions</h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto saepe hic
                             obcaecati laboriosam quisquam. At sequi mollitia optio corporis.</p>
                         <form class="d-flex">
@@ -72,7 +72,8 @@
     <main>
         <section class="container w-75 h-100 section">
             <div class="row text-center">
-                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0" style="border-left-style: none; border-top-style: none;">
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0"
+                    style="border-left-style: none; border-top-style: none;">
                     <img src="images/business.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Business Law</h5>
                     <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
@@ -84,13 +85,15 @@
                     <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
                     <img src="images/Frame.png" alt="">
                 </div>
-                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0" style="border-right-style: none; border-top-style: none;">
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0"
+                    style="border-right-style: none; border-top-style: none;">
                     <img src="images/child.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Child Support</h5>
                     <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
                     <img src="images/Frame.png" alt="">
                 </div>
-                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0" style="border-left-style: none; border-bottom-style: none;">
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0"
+                    style="border-left-style: none; border-bottom-style: none;">
                     <img src="images/education.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Education Law</h5>
                     <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
@@ -102,20 +105,70 @@
                     <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
                     <img src="images/Frame.png" alt="">
                 </div>
-                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0" style="border-right-style: none; border-bottom-style: none;">
+                <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0"
+                    style="border-right-style: none; border-bottom-style: none;">
                     <img src="images/tax.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Tax Law</h5>
                     <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
                     <img src="images/Frame.png" alt="">
-                </div>   
+                </div>
             </div>
         </section>
 
         <section class="container section">
-            <div>
-                <h1>What Our Client Say</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam consequuntur ea in error quaerat! Expedita quod, maxime ex, soluta tempore dolore exercitationem earum consequuntur quos, incidunt quasi molestiae voluptates esse.</p>
+            <div class="mx-auto text-area text-center mb-5">
+                <h1 class="display-4 fw-semibold">What Our Client Say</h1>
+                <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam consequuntur ea in error quaerat!
+                    Expedita quod, maxime ex, soluta tempore dolore exercitationem earum consequuntur quos, incidunt
+                    quasi molestiae voluptates esse.</p>
             </div>
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active c-item">
+                        <img src="images/slider-1.jpg" class="d-block w-100 img-item" alt="...">
+                        <div class="carousel-caption">
+                            <img src="images/user-1.png" style="height:70px; width:70px;" class="mb-3" alt="">
+                            <h5 class="mb-3">First slide label</h5>
+                            <p class="mb-5">Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item c-item">
+                        <img src="images/slider-2.jpg" class="d-block w-100 img-item" alt="...">
+                        <div class="carousel-caption">
+                            <img src="images/user-2.png" style="height:70px; width:70px;" class="mb-3" alt="">
+                            <h5 class="mb-3">Second slide label</h5>
+                            <p class="mb-5">Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item c-item">
+                        <img src="images/slider-3.jpg" class="d-block w-100 img-item" alt="...">
+                        <div class="carousel-caption">
+                            <img src="images/user-3.png" style="height:70px; width:70px;" class="mb-3" alt="">
+                            <h5 class="mb-3">Third slide label</h5>
+                            <p class="mb-5">Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
         </section>
 
     </main>
