--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             <div class="bg-image banner rounded" style="background-image: url(images/banner.png);">
                 <div class="color-overlay d-flex justify-content-center align-items-center">
                     <div class="mx-auto text-area">
-                        <h1 class="display-5 fw-semibold mx-5 px-lg-3" ;>We Provide Effective Legal Solutions</h1>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae architecto saepe hic
-                            obcaecati laboriosam quisquam. At sequi mollitia optio corporis.</p>
+                        <h1 class="display-5 fw-semibold mx-5 px-lg-3">We Provide Effective Legal Solutions</h1>
+                        <p>Our approach to delivering law services is different. We are laser-focused on meeting your need to get results while managing your bottom line. Our modern, streamlined, and tech enabled structure is client-focused. Because your business is our business.</p>
                         <form class="d-flex">
                             <input class="form-control me-2" type="text" placeholder="Search Your Services">
                             <button class="btn btn-warning">Search</button>
@@ -69,47 +68,51 @@
         </section>
     </header>
     <!-- Main Section  -->
-    <main class="container">
-        <section class="container w-75 h-100 section">
+    <main class="container section">
+        <div class="text-center">
+            <h1>Our Practice Area</h1>
+            <p>We have a bunch of specialty area but top services are presented here for your quick look.</p>
+        </div>
+        <section class="container w-75 h-100">
             <div class="row text-center">
                 <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0"
                     style="border-left-style: none; border-top-style: none;">
                     <img src="images/business.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Business Law</h5>
-                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <p class="card-text mt-3">All kind of business case. Business deeds and deals can be handled</p>
                     <img src="images/Frame.png" alt="">
                 </div>
                 <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0">
                     <img src="images/criminal.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Criminal Law</h5>
-                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <p class="card-text mt-3">All criminal records clearing. Also work hard until justice delivered </p>
                     <img src="images/Frame.png" alt="">
                 </div>
                 <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0"
                     style="border-right-style: none; border-top-style: none;">
                     <img src="images/child.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Child Support</h5>
-                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <p class="card-text mt-3">Child abuse, child protection, child custody all kind of matter</p>
                     <img src="images/Frame.png" alt="">
                 </div>
                 <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0"
                     style="border-left-style: none; border-bottom-style: none;">
                     <img src="images/education.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Education Law</h5>
-                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <p class="card-text mt-3">Help student to get stipend and Institution for any kind of law activity</p>
                     <img src="images/Frame.png" alt="">
                 </div>
                 <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0">
                     <img src="images/divorce.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Divorce Law</h5>
-                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <p class="card-text mt-3">Problem between husband and wife we personally handled this kind matter with privacy </p>
                     <img src="images/Frame.png" alt="">
                 </div>
                 <div class="card align-items-center col-12 col-sm-4 p-5 rounded-0"
                     style="border-right-style: none; border-bottom-style: none;">
                     <img src="images/tax.png" style="height:70px; width:70px;" alt="">
                     <h5 class="card-title mt-3">Tax Law</h5>
-                    <p class="card-text mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, nam.</p>
+                    <p class="card-text mt-3">Taxation and Insurance matter all kind of law abide deal is done carefully </p>
                     <img src="images/Frame.png" alt="">
                 </div>
             </div>
@@ -118,10 +121,7 @@
         <section class="container section">
             <div class="mx-auto text-area text-center mb-5">
                 <h1 class="display-4 fw-semibold">What Our Client Say</h1>
-                <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam consequuntur ea in error
-                    quaerat!
-                    Expedita quod, maxime ex, soluta tempore dolore exercitationem earum consequuntur quos, incidunt
-                    quasi molestiae voluptates esse.</p>
+                <p class="fs-5">We have successfully serve a lot of clients and also delivering our services to right now. Here are some clients feedback.</p>
             </div>
 
             <!-- Slider  -->
@@ -140,24 +140,24 @@
                         <img src="images/slider-1.jpg" class="d-block w-100 img-item" alt="...">
                         <div class="carousel-caption">
                             <img src="images/user-1.png" style="height:70px; width:70px;" class="mb-3" alt="">
-                            <h5 class="mb-3">First slide label</h5>
-                            <p class="mb-5">Some representative placeholder content for the first slide.</p>
+                            <h5 class="mb-3">Eddard Stark</h5>
+                            <p class="mb-5">Few years ago there is a incident that I was suppose to get my stipend fund from the govt but somehow the it get revoked and Legal Law help me out to get my full amount. Thanks to them they pay a great service to me.</p>
                         </div>
                     </div>
                     <div class="carousel-item c-item">
                         <img src="images/slider-2.jpg" class="d-block w-100 img-item" alt="...">
                         <div class="carousel-caption">
                             <img src="images/user-2.png" style="height:70px; width:70px;" class="mb-3" alt="">
-                            <h5 class="mb-3">Second slide label</h5>
-                            <p class="mb-5">Some representative placeholder content for the second slide.</p>
+                            <h5 class="mb-3">Donald Trump</h5>
+                            <p class="mb-5">The FBI alleged me with taxation purpose. I seek help from this farm. They quickly reacted and the case is still on the court and I believe i will win this case thanks to them</p>
                         </div>
                     </div>
                     <div class="carousel-item c-item">
                         <img src="images/slider-3.jpg" class="d-block w-100 img-item" alt="...">
                         <div class="carousel-caption">
                             <img src="images/user-3.png" style="height:70px; width:70px;" class="mb-3" alt="">
-                            <h5 class="mb-3">Third slide label</h5>
-                            <p class="mb-5">Some representative placeholder content for the third slide.</p>
+                            <h5 class="mb-3">Jonny Depp</h5>
+                            <p class="mb-5">I have marital issues this farm handled it with privacy and they have a handful of skill people. 5 star to them </p>
                         </div>
                     </div>
                 </div>
@@ -177,8 +177,7 @@
         <section class="container section">
             <div class="mx-auto text-center ">
                 <h1>Frequently Asked Any Question</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia, laudantium hic omnis mollitia
-                    praesentium vitae. Alias ut non velit!</p>
+                <p>Most asked question and answer are given below. Please click to see the answer</p>
             </div>
             <div class="row align-items-center justify-content-center">
                 <div class="col-12 col-sm-6 ">
@@ -188,20 +187,13 @@
                                 <button class="accordion-button bg-warning-subtle" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
                                     aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                                    Accordion Item #1
+                                    Difference between flex-box and Grid.
                                 </button>
                             </h2>
                             <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                                 aria-labelledby="panelsStayOpen-headingOne">
                                 <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
-                                    until
-                                    the collapse plugin adds the appropriate classes that we use to style each element.
-                                    These classes control the overall appearance, as well as the showing and hiding via
-                                    CSS
-                                    transitions. You can modify any of this with custom CSS or overriding our default
-                                    variables. It's also worth noting that just about any HTML can go within the
-                                    <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong>In a simple word flex-box was used </strong>for single dimension purpose and grid can work on multi-dimension. Flex only work on either column or row but for grid its both.
                                 </div>
                             </div>
                         </div>
@@ -210,19 +202,13 @@
                                 <button class="accordion-button collapsed bg-warning-subtle" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo"
                                     aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                                    Accordion Item #2
+                                    Purpose of media query? 
                                 </button>
                             </h2>
                             <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                                 aria-labelledby="panelsStayOpen-headingTwo">
                                 <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding
-                                    via CSS transitions. You can modify any of this with custom CSS or overriding our
-                                    default variables. It's also worth noting that just about any HTML can go within the
-                                    <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong> For design a responsive website media query needed</strong>. The CSS class can be rewrite as with break point so and redesign for that targeted screen only. SO the website can be experienced better in all width device.
                                 </div>
                             </div>
                         </div>
@@ -231,20 +217,28 @@
                                 <button class="accordion-button collapsed bg-warning-subtle" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
                                     aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                                    Accordion Item #3
+                                    What is CSS box Model?
                                 </button>
                             </h2>
                             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                                 aria-labelledby="panelsStayOpen-headingThree">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until
-                                    the collapse plugin adds the appropriate classes that we use to style each element.
-                                    These classes control the overall appearance, as well as the showing and hiding via
-                                    CSS
-                                    transitions. You can modify any of this with custom CSS or overriding our default
-                                    variables. It's also worth noting that just about any HTML can go within the
-                                    <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong>The CSS box model is a layout model used for rendering elements in web pages.</strong> It defines the layout of elements as rectangular boxes, with each box having content, padding, borders, and margins. The size and position of these boxes are determined by CSS properties such as width, height, padding, borders, and margins.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                <button class="accordion-button collapsed bg-warning-subtle" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapsefour"
+                                    aria-expanded="false" aria-controls="panelsStayOpen-collapsefour">
+                                    Semantic Tag
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse"
+                                aria-labelledby="panelsStayOpen-headingThree">
+                                <div class="accordion-body">
+                                    <strong>Semantic tags are HTML tags that provide meaning to the structure of a web page.</strong> They describe the type of content contained within the tags, such as headings, paragraphs, and lists, allowing search engines and assistive technologies to understand the content better and provide better accessibility.
                                 </div>
                             </div>
                         </div>
